deploy/openshift-cluster.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: URLShortener
  namespace: m-aamirmalick-dev
spec:
  replicas: 1
  revisionHistoryLimit: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 0
  selector:
    matchLabels:
      app: URLShortener
  template:
    metadata:
      labels:
        app: URLShortener
    spec:
      containers:
        - name: URLShortener
          image: image-registry.openshift-image-registry.svc:5000/m-aamirmalick-dev/my-app:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "1"
              memory: "1Gi"
            limits:
              cpu: "1"
              memory: "1Gi"
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: URLShortener-service
  namespace: m-aamirmalick-dev
spec:
  selector:
    app: URLShortener
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: URLShortener-route
  namespace: m-aamirmalick-dev
spec:
  to:
    kind: Service
    name: URLShortener-service
  port:
    targetPort: 8080
  tls:
    termination: edge
